--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>株式会社DIVE</title>
 </head>
 <body>
-<header class="header">
-    <img src="./images/logo.png">
+<header class="header clearfix">
+    <a href="index.html">
+        <img src="./images/logo.png" class="logo_image">
+    </a>
     <nav>
-        <ul class="top_menu">
+        <ul class="top_menu clearfix">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="#">事業内容</a></li>
             <li><a href="#">会社概要</a></li>
